--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -1,6 +1,6 @@
 @media (max-width: 1024px)
 	header
-		background-color: #4056a1
+		background-color: $blue
 		color: white
 		.container
 			.wrapper
@@ -13,6 +13,10 @@
 @media (max-width: 625px)
 	.slider
 		display: none
+	.userInfo
+		display: none
+	.data
+		width: 100% !important
 
 @media (max-width: 480px)
 	header
@@ -23,3 +27,5 @@
 				flex-direction: column
 				.smalllogo
 					text-align: center
+	main
+		margin-top: 120px
