--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,17 +1,6 @@
 @import "reset"
 @import "fonts"
+@import "base"
 @import "component"
-
-.container
-	max-width: 1100px
-	width: 100%
-	min-width: 300px
-	margin: 0 auto
-
-.wrapper
-	display: flex
-	justify-content: space-between
-	flex-wrap: wrap
-
-@import "page/include"
+@import "layout"
 @import "media"
