--- a/app/sass/_reset.sass
+++ b/app/sass/_reset.sass
@@ -6,16 +6,19 @@ body
 *
 	box-sizing: border-box
 	outline: none
-	font-size: 14px 
-	//font-family: 'Open Sans', sans-serif
+	font-size: 14px
 
-a
+a, button
 	color: #ffffff
 	cursor: pointer
 	text-decoration: none
 	&:hover, &:active, &:focus, &:link, &:visited
 		color: #ffffff
 		text-decoration: none
+
+button
+	border: none
+	background-color: transparent
 
 p, ul, li
 	margin: 0
