--- a/app/jade/login.jade
+++ b/app/jade/login.jade
@@ -3,55 +3,56 @@ html(lang="en")
 		meta(charset="UTF-8")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(http-equiv="X-UA-Compatible", content="ie=edge")
-		title Document
+		title Login | NoteBook ©
 		link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css")
 		link(rel="stylesheet", href="css/libs.min.css") 
 		link(rel="stylesheet", href="css/main.min.css")
 		script(src="js/libs.min.js") 
-		script(src="js/slider.js")
+		//script(src="js/slider.js")
 	body
 		header
 			.logo
 				img(src="img/logo.png" alt="logo")
 			.container
-				.wrapper
-					.smalllogo
-						img(src="img/logo.png" alt="logo")
-					.menu
-						button#signin
-							| SIGN IN
-						button#signup
-							| SIGN UP
-		.slider
-			.slides
-				.slide.active
-					.wrapper
-						.slideContent(style="background-image: url(img/slides/1.png)")
-							.wrapper
-								h2(style="color: #d79922")
-									| STORE YOUR NOTES ONLINE
-								p(style="color: #d79922")
-									| FIREBASE DATABASE PROVIDES ACCESS TO YOUR DATA ANYTIME
-				.slide
-					.wrapper
-						.slideContent(style="background-image: url(img/slides/2.png)")
-							.wrapper
-								h2(style="color: #f13c1f")
-									| EDIT NOTES EVERYWHERE
-								p(style="color: #f13c1f")
-									| NOTEBOOK IS USABLE FROM ANY DEVICE AND SMARTPHONE
-				.slide
-					.wrapper
-						.slideContent(style="background-image: url(img/slides/3.png)")
-							.wrapper
-								h2(style="color: #4056a1")
-									| SIGN IN WITH GOOGLE
-								p(style="color: #4056a1")
-									| USE YOUR GOOGLE ACCOUNT TO SIGN IN AND USE NOTEBOOK
-			.controls
-				button#prev
-					img(src="img/prev.png" alt="prev")
-				.container.wrapper
-					#indicators
-				button#next
-					img(src="img/next.png" alt="next")
+				.top-bar
+					button#show-menu
+						i.fas.fa-bars
+					img(src="img/logo.png" alt="logo")
+				.menu
+					a#sign-in
+						| SIGN IN
+					a#sign-up
+						| SIGN UP
+		main
+			container
+
+		//.slider
+		//	#slides
+		//		.slide(style="background-color: red").active
+		//			//.slideContent(style="background-image: url(img/slides/1.png)")
+		//			//	.wrapper
+		//			//		h2(style="color: #d79922")
+		//			//			| STORE YOUR NOTES ONLINE
+		//			//		p(style="color: #d79922")
+		//			//			| FIREBASE DATABASE PROVIDES ACCESS TO YOUR DATA ANYTIME
+		//		.slide(style="background-color: green")
+		//			//.slideContent(style="background-image: url(img/slides/2.png)")
+		//			//	.wrapper
+		//			//		h2(style="color: #f13c1f")
+		//			//			| EDIT NOTES EVERYWHERE
+		//			//		p(style="color: #f13c1f")
+		//			//			| NOTEBOOK IS USABLE FROM ANY DEVICE AND SMARTPHONE
+		//		.slide(style="background-color: blue")
+		//			//.slideContent(style="background-image: url(img/slides/3.png)")
+		//			//	.wrapper
+		//			//		h2(style="color: #4056a1")
+		//			//			| SIGN IN WITH GOOGLE
+		//			//		p(style="color: #4056a1")
+		//			//			| USE YOUR GOOGLE ACCOUNT TO SIGN IN AND USE NOTEBOOK
+		//	.controls
+		//		button#prev
+		//			img(src="img/prev.png" alt="prev")
+		//		.container.wrapper
+		//			#indicators
+		//		button#next
+		//			img(src="img/next.png" alt="next")
