--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -1,13 +1,16 @@
-// Color scheme
-$blue: #4056a1
-$grey: #f1f0eb
-$yellow: #d79922
+body
+	background-color: $grey
 
 .container
 	max-width: 1100px
 	width: 100%
 	min-width: 300px
 	margin: 0 auto
+	display: flex
+	justify-content: space-between
+	align-items: center
+	&:after, &:before
+		display: none
 
 .wrapper
 	display: flex
