--- a/app/sass/_layout.sass
+++ b/app/sass/_layout.sass
@@ -1,160 +1,163 @@
 header
-	position: absolute
-	top: 0
-	left: 0
 	height: 70px
 	min-width: 100%
-	width: auto
 	font-family: 'Shark-Random-Funnyness', sans-serif
 	color: #4b4a45
 	padding: 0 25px
-	z-index: 1
 	.container
 		height: 100%
-		.wrapper
-			height: 100%
-			justify-content: flex-end
-			.smalllogo
-				display: none
-				img
-					height: 70px
-			.menu
-				white-space: nowrap
-				align-self: center
-				font-size: 20px
-				padding-bottom: 10px
-			button
-				white-space: nowrap
-				&:not(:first-child)
-					margin-left: 45px
-				&:hover
-					color: $yellow
-	.logo
-		position: absolute
-		top: 0
-		left: 0
-		width: 0
-		height: 0
-		border-left: 250px solid $blue
-		border-top: 75px solid $blue
-		border-bottom: 75px solid transparent
-		border-right: 250px solid transparent
-		img
-			width: 200px
-			position: relative
-			top: -75px
-			left: -225px
+		justify-content: flex-end
 
-.slider
-	width: 100%
-	height: 100vh
-	background-color: $grey
-	.slides
-		width: 100%
-		height: 100%
-		.slide
-			opacity: 0
-			position: absolute
-			top: 0
-			width: 100%
-			height: 100%
-			transition: opacity 2s
-			.wrapper
-				height: 100%
-				align-items: center
-				justify-content: center
-				.slideContent
-					height: 500px
-					background-position: center
-					background-size: 500px
-					background-repeat: no-repeat
-					min-width: 600px
-					width: 100%
-					.wrapper
-						flex-direction: column
-						align-items: center
-						justify-content: center
-						h2
-							background-color: $grey
-							white-space: nowrap
-							font-family: 'Roboto Black', sans-serif
-							padding: 5px
-						p
-							font-size: 14px
-							background-color: $grey
-							font-family: 'Roboto Black', sans-serif
-							padding: 2px
+.top-bar
+	display: none
+	align-items: center
+	button
+		display: none
+		color: white
+		margin-right: 15px
+		i
+			font-size: 24px
+		&:hover
+			color: $yellow
+	img
+		height: 70px
+.menu
+	white-space: nowrap
+	align-self: center
+	font-size: 20px
+	padding-bottom: 10px
+	a
+		&:not(:first-child)
+			margin-left: 35px
 
-
-		.slide.active
-			opacity: 1
-
-.controls
-	display: flex
+.logo
 	position: absolute
 	top: 0
-	width: 100%
-	height: 100vh
-	justify-content: space-between
-	button
-		box-sizing: border-box
-		margin: auto
-		width: 60px
-		height: 60px
-		img
-			box-sizing: border-box
-			border-radius: 50%
-			transition: 0.3s
-			border: $grey solid 1px
-			&:hover
-				border: $yellow solid 1px
-	#indicators
-		width: auto
-		display: flex
-		margin: auto auto 25px
-		align-self: center
-		.indicator
-			width: 15px
-			height: 15px
-			margin: 0 15px
-			border-radius: 50%
-			box-sizing: border-box
-			transition: 0.2s
-			border: $yellow solid 2px
-			&:not(.active):hover
-				border: #d79922 solid 4px
-		.active
-			background-color: #d79922
+	left: 0
+	width: 0
+	height: 0
+	border-left: 250px solid $blue
+	border-top: 75px solid $blue
+	border-bottom: 75px solid transparent
+	border-right: 250px solid transparent
+	img
+		width: 200px
+		position: relative
+		top: -75px
+		left: -225px
+
+//.slider
+//	width: 100%
+//	height: calc(100vh - 70px)
+//	background-color: $grey
+//#slides
+//	width: 100%
+//	height: 100%
+//	white-space: nowrap
+//	overflow: hidden
+//.slide
+//	display: inline-block
+//	opacity: 0
+//	width: 100%
+//	height: 100%
+//	transition: opacity 2s
+//	align-items: center
+//	justify-content: center
+//.slideContent
+//	height: 500px
+//	background-position: center
+//	background-size: 500px
+//	background-repeat: no-repeat
+//	min-width: 600px
+//	width: 100%
+//	.wrapper
+//		height: 100%
+//		flex-direction: column
+//		align-items: center
+//		justify-content: center
+//		h2
+//			background-color: $grey
+//			white-space: nowrap
+//			font-family: 'Roboto Black', sans-serif
+//			padding: 5px
+//		p
+//			font-size: 14px
+//			background-color: $grey
+//			font-family: 'Roboto Black', sans-serif
+//			padding: 2px
+//.slide.active
+//	opacity: 1
+//
+//.controls
+//	display: flex
+//	position: relative
+//	top: -100%
+//	width: 100%
+//	height: 100%
+//	justify-content: space-between
+//	button
+//		box-sizing: border-box
+//		margin: auto
+//		width: 60px
+//		height: 60px
+//		img
+//			box-sizing: border-box
+//			border-radius: 50%
+//			transition: 0.3s
+//			border: $grey solid 1px
+//			&:hover
+//				border: $yellow solid 1px
+//	#indicators
+//		width: auto
+//		display: flex
+//		margin: auto auto 25px
+//		align-self: center
+//		.indicator
+//			width: 15px
+//			height: 15px
+//			margin: 0 15px
+//			border-radius: 50%
+//			box-sizing: border-box
+//			transition: 0.2s
+//			border: $yellow solid 2px
+//			&:not(.active):hover
+//				border: #d79922 solid 4px
+//		.active
+//			background-color: #d79922
 
 main
 	font-family: 'Roboto', sans-serif
-	margin-top: 80px
+	display: flex
+	justify-content: center
 	.container
-		.wrapper
-			.userInfo
-				width: 25%
-				.wrapper
-					flex-direction: column
-					align-items: center
-			.data
-				width: 75%
-				.wrapper
-					flex-direction: column
-					margin: 15px
-					.date
-						p
-							font-weight: bolder
-							border-bottom: black solid 1px
-						.notes
-							.wrapper
-								flex-direction: row
-								justify-content: flex-start
-								margin: 0 -5px
-								.note
-									flex: 1 0
-									box-sizing: border-box
-									margin: 5px
-									height: 200px
-									min-width: 200px
-									max-width: 250px
-									background-color: #efe1ba
+		align-items: flex-start
+		padding: 0
+		margin: 0 -15px
+
+.user-info
+	width: 25%
+	display: flex
+	flex-direction: column
+	align-items: center
+	margin: 15px
+
+.data
+	width: 75%
+	margin: 15px
+.date
+	p
+		font-weight: bolder
+		border-bottom: black solid 1px
+.notes
+	display: flex
+	flex-direction: row
+	justify-content: flex-start
+	flex-wrap: wrap
+	margin: 5px -5px 0
+.note
+	flex-basis: calc(33.333% - 10px)
+	box-sizing: border-box
+	margin: 5px
+	height: 200px
+	background-color: #efe1ba
+	box-shadow: 2px 2px 5px rgba(0,0,0,0.2)
