--- a/app/sass/_layout.sass
+++ b/app/sass/_layout.sass
@@ -46,85 +46,6 @@ header
 		top: -75px
 		left: -225px
 
-//.slider
-//	width: 100%
-//	height: calc(100vh - 70px)
-//	background-color: $grey
-//#slides
-//	width: 100%
-//	height: 100%
-//	white-space: nowrap
-//	overflow: hidden
-//.slide
-//	display: inline-block
-//	opacity: 0
-//	width: 100%
-//	height: 100%
-//	transition: opacity 2s
-//	align-items: center
-//	justify-content: center
-//.slideContent
-//	height: 500px
-//	background-position: center
-//	background-size: 500px
-//	background-repeat: no-repeat
-//	min-width: 600px
-//	width: 100%
-//	.wrapper
-//		height: 100%
-//		flex-direction: column
-//		align-items: center
-//		justify-content: center
-//		h2
-//			background-color: $grey
-//			white-space: nowrap
-//			font-family: 'Roboto Black', sans-serif
-//			padding: 5px
-//		p
-//			font-size: 14px
-//			background-color: $grey
-//			font-family: 'Roboto Black', sans-serif
-//			padding: 2px
-//.slide.active
-//	opacity: 1
-//
-//.controls
-//	display: flex
-//	position: relative
-//	top: -100%
-//	width: 100%
-//	height: 100%
-//	justify-content: space-between
-//	button
-//		box-sizing: border-box
-//		margin: auto
-//		width: 60px
-//		height: 60px
-//		img
-//			box-sizing: border-box
-//			border-radius: 50%
-//			transition: 0.3s
-//			border: $grey solid 1px
-//			&:hover
-//				border: $yellow solid 1px
-//	#indicators
-//		width: auto
-//		display: flex
-//		margin: auto auto 25px
-//		align-self: center
-//		.indicator
-//			width: 15px
-//			height: 15px
-//			margin: 0 15px
-//			border-radius: 50%
-//			box-sizing: border-box
-//			transition: 0.2s
-//			border: $yellow solid 2px
-//			&:not(.active):hover
-//				border: #d79922 solid 4px
-//		.active
-//			background-color: #d79922
-
 main
 	font-family: 'Roboto', sans-serif
 	display: flex
@@ -134,20 +55,38 @@ main
 		padding: 0
 		margin: 0 -15px
 
-.user-info
+#side-bar
 	width: 25%
+	min-width: 200px
 	display: flex
 	flex-direction: column
 	align-items: center
 	margin: 15px
+	min-height: 330px
 
+.user-info
+	display: flex
+	flex-direction: column
+	align-items: center
+	img
+		width: 200px
+
+#user-name
+	font-size: 20px
+	margin-top: 15px
+	font-family: 'Roboto Black', sans-serif
+
+#user-email
+	font-family: 'Roboto', sans-serif
+	margin-top: 5px
 .data
 	width: 75%
 	margin: 15px
 .date
-	p
+	> p
+		color: $darkgrey
 		font-weight: bolder
-		border-bottom: black solid 1px
+		border-bottom: $darkgrey solid 1px
 .notes
 	display: flex
 	flex-direction: row
@@ -158,6 +97,36 @@ main
 	flex-basis: calc(33.333% - 10px)
 	box-sizing: border-box
 	margin: 5px
-	height: 200px
+	padding: 0 10px 5px
 	background-color: #efe1ba
 	box-shadow: 2px 2px 5px rgba(0,0,0,0.2)
+	display: flex
+	flex-direction: column
+	align-items: center
+	transition: box-shadow 0.5s
+	align-self: flex-start
+	&:hover
+		box-shadow: 2px 2px 10px rgba(0,0,0,0.4)
+.note-head
+	width: 100%
+	padding-bottom: 10px
+	display: flex
+	justify-content: center
+	p
+		font-size: 22px
+		font-family: 'Shark-Random-Funnyness', 'Roboto Black', sans-serif
+.note-controls
+	button
+		color: $darkgrey
+		transition: color 0.3s
+#overlay
+	display: none
+	position: fixed
+	top: 0
+	width: 100%
+	height: 100vh
+	background-color: rgba(0,0,0,0.4)
+	cursor: pointer
+	transition: background-color 0.2s
+	&:hover
+		background-color: rgba(0,0,0,0.2)
