--- a/app/sass/_colors.sass
+++ b/app/sass/_colors.sass
@@ -2,4 +2,7 @@ $blue: #4056a1
 $grey: #f1f0eb
 $yellow: #d79922
 $red: #f13c1f
+$lightred: #ff573f
 $darkgrey: #545149
+$green: #054717
+$lightgreen: #099a33
