--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,8 +1,5 @@
 @font-face
-	font-family: 'Shark-Random-Funnyness'
-	src : url('../fonts/shark/Shark-Random-Funnyness.ttf.woff') format('woff'),
-	url('../fonts/shark/Shark-Random-Funnyness.ttf.svg#Shark-Random-Funnyness') format('svg'),
-	url('../fonts/shark/Shark-Random-Funnyness.ttf.eot'),
-	url('../fonts/shark/Shark-Random-Funnyness.ttf.eot?#iefix') format('embedded-opentype')
+	font-family: 'Pangolin'
+	src : url('../fonts/pangolin/Pangolin-Regular.ttf') format('ttf')
 	font-weight: normal
 	font-style: normal
