--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -17,3 +17,7 @@ body
 	display: flex
 	justify-content: space-between
 	flex-wrap: wrap
+
+main
+	min-height: calc(100vh - 70px)
+	height: calc(100% - 70px)
