--- a/app/sass/_layout.sass
+++ b/app/sass/_layout.sass
@@ -84,6 +84,7 @@ main
 	width: 75%
 	margin: 15px
 .date
+	margin-bottom: 15px
 	> p
 		color: $darkgrey
 		font-weight: bolder
@@ -116,3 +117,11 @@ main
 	p
 		font-size: 22px
 		font-family: 'Pangolin', 'Roboto Black', sans-serif
+
+.sign-in-section, .sign-up-section, .new-note-section
+	width: 100%
+	height: 100%
+	display: flex
+	flex-direction: column
+	justify-content: center
+	align-items: center
