--- a/app/sass/_component.sass
+++ b/app/sass/_component.sass
@@ -13,6 +13,19 @@ i
 	margin-right: 10px
 	font-size: 16px
 
+input, textarea
+	border: 1px solid $darkgrey
+	padding: 7.5px 10px
+	border-radius: 10px
+	margin-top: 10px
+
+textarea
+	resize: vertical
+
+input[type='date']
+	width: 190px
+	padding: 5px 10px
+
 button
 	&.big-button, &.small-button
 		background-color: $red
@@ -47,7 +60,8 @@ button
 	position: fixed
 	top: 0
 	width: 100%
-	height: 100vh
+	min-height: 100vh
+	height: 100%
 	background-color: rgba(0,0,0,0.4)
 	transition: 0.3s all
 	z-index: 20
@@ -67,8 +81,6 @@ button
 .modal
 	opacity: 0
 	visibility: hidden
-	width: 100%
-	max-width: 500px
 	position: fixed
 	top: 50%
 	left: 50%
