--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -32,7 +32,8 @@
 		left: -50%
 		width: 50%
 		min-width: 200px
-		height: 100vh
+		min-height: 100vh
+		height: 100%
 		background-color: white
 		margin: 0
 		box-shadow: 5px 0 25px rgba(0,0,0,0.3)
@@ -52,7 +53,10 @@
 		&:after
 			content: ' '
 			display: block
-			width: 33px
+			width: 43px
+	.data
+		&:last-child
+			margin-bottom: 90px
 	.new-note
 		position: fixed
 		bottom: 25px
