--- a/app/sass/_layout.sass
+++ b/app/sass/_layout.sass
@@ -14,22 +14,14 @@ header
 	button
 		display: none
 		color: white
-		margin: 0 15px
+		margin-left: 15px
 		i
 			font-size: 24px
 		&:hover
 			color: $yellow
 	img
+		margin-left: 15px
 		height: 70px
-.menu
-	white-space: nowrap
-	align-self: center
-	font-size: 20px
-	a
-		&:hover
-			color: $yellow
-		&:not(:first-child)
-			margin-left: 35px
 
 .logo
 	position: absolute
@@ -63,7 +55,10 @@ main
 
 .user-info
 	img
-		width: 200px
+		margin-top: 15px
+		background-color: $blue
+		border-radius: 50%
+		width: 150px
 
 .side-bar
 	width: 25%
@@ -80,21 +75,13 @@ main
 #user-email
 	font-family: 'Roboto', sans-serif
 	margin-top: 5px
-.data
-	width: 75%
-	margin: 15px
-.date
-	margin-bottom: 15px
-	> p
-		color: $darkgrey
-		font-weight: bolder
-		border-bottom: $darkgrey solid 1px
 .notes
+	width: 75%
+	margin: 10px
 	display: flex
 	flex-direction: row
 	justify-content: flex-start
 	flex-wrap: wrap
-	margin: 5px -5px 0
 .note
 	flex-basis: calc(33.333% - 10px)
 	box-sizing: border-box
@@ -111,13 +98,24 @@ main
 		box-shadow: 2px 2px 10px rgba(0,0,0,0.4)
 .note-head
 	width: 100%
-	padding: 10px
+	padding: 10px 0
 	display: flex
-	justify-content: center
+	justify-content: space-between
+	border-bottom: 1px solid black
+	margin-bottom: 10px
 	p
-		font-size: 22px
+		white-space: nowrap
+		font-size: 18px
 		font-family: 'Pangolin', 'Roboto Black', sans-serif
-
+		&:last-child
+			font-size: 14px
+.note-controls
+	width: 100%
+	margin-top: 10px
+	padding: 10px 0 5px
+	display: flex
+	justify-content: space-around
+	border-top: 1px solid black
 .sign-in-section, .sign-up-section, .new-note-section
 	width: 100%
 	height: 100%
