--- a/app/sass/_layout.sass
+++ b/app/sass/_layout.sass
@@ -86,7 +86,7 @@ main
 	flex-basis: calc(33.333% - 10px)
 	box-sizing: border-box
 	margin: 5px
-	padding: 0 10px 5px
+	padding: 0 10px 10px
 	background-color: #efe1ba
 	box-shadow: 2px 2px 5px rgba(0,0,0,0.2)
 	display: flex
@@ -96,19 +96,32 @@ main
 	align-self: flex-start
 	&:hover
 		box-shadow: 2px 2px 10px rgba(0,0,0,0.4)
+	input, p
+		font-family: 'Pangolin', 'Roboto Black', sans-serif
+	input, textarea
+		border: none
+		background-color: transparent
+		border-radius: 0
+		margin: 0
+		padding: 0
+	textarea
+		width: 100%
+	input
+		width: calc(100% - 110px)
+		font-size: 18px
+	p
+		margin-left: 10px
+		font-size: 14px
+	button
+		margin-top: 10px
+		align-self: flex-end
 .note-head
 	width: 100%
 	padding: 10px 0
 	display: flex
 	justify-content: space-between
-	border-bottom: 1px solid black
 	margin-bottom: 10px
-	p
-		white-space: nowrap
-		font-size: 18px
-		font-family: 'Pangolin', 'Roboto Black', sans-serif
-		&:last-child
-			font-size: 14px
+	border-bottom: 1px solid black
 .note-controls
 	width: 100%
 	margin-top: 10px
